Login and food items

--- a/App/views/insert.ejs
+++ b/App/views/insert.ejs
@@ -32,6 +32,10 @@
 				<label for="password">Password</label>
 				<input type="text" class="form-control" id="password" name="password" placeholder="Enter your password">
 			</div>
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input type="text" class="form-control" id="username" name="username" placeholder="Enter a unique username">
+			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 		
