--- a/App/views/customerhomepage.ejs
+++ b/App/views/customerhomepage.ejs
@@ -14,11 +14,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Home Page</h1>
-    <p>Welcome</p>
+    <h1>Welcome <%= name%></h1>
+    <p>Home Page</p>
     <li><a href="/login">Login</a></li>
     <li><a href="/insert">Add User</a></li>
     <li><a href="/select">View All Users</a></li>
     <li><a href="/drivers">View All Drivers</a></li>
+    <li><a href="/restaurants">View All Restaurants</a></li>
   </body>
 </html>
