--- a/App/views/drivers.ejs
+++ b/App/views/drivers.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
 		<!-- Page Title -->
-    <title>CS2102 Database Connect</title>
+    <title>Drivers View Page</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 		
 		<!-- CSS for Styling -->
@@ -21,7 +21,8 @@
 					<th scope="col">User ID</th>
 					<th scope="col">Name</th>
 					<th scope="col">Username</th>
-					<th scope="col">Password</th>
+                    <th scope="col">Password</th>
+                    <th scope="col">Commission</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -29,8 +30,9 @@
 				<tr>
 					<td><%= data[i].uid%></td>
 					<td><%= data[i].name%></td>
-					<td><%= data[i].username%></td>
-					<td><%= data[i].password%></td>
+                    <td><%= data[i].username%></td>
+                    <td><%= data[i].commission%></td>
+                    <td><%= data[i].password%></td>
 				</tr>
 				<% } %>
 			</tbody>
