More restaurants added

--- a/App/views/customerhomepage.ejs
+++ b/App/views/customerhomepage.ejs
@@ -16,10 +16,7 @@
   <body>
     <h1>Welcome <%= name%></h1>
     <p>Home Page</p>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/insert">Add User</a></li>
-    <li><a href="/select">View All Users</a></li>
-    <li><a href="/drivers">View All Drivers</a></li>
     <li><a href="/restaurants">View All Restaurants</a></li>
+    <li>View Order History</li>
   </body>
 </html>
