--- a/App/views/restaurants.ejs
+++ b/App/views/restaurants.ejs
@@ -28,8 +28,7 @@
 				<% for(var i=0; i<data.length; i++) { %>
 				<tr>
                     <td><%= data[i].rid%></td>
-                    <td><%= data[i].name%></td>
-					<!-- <td><%= data[i].name%></td> maybe put a link here to go to the restaurant's page -->
+                    <td><li><a href="/restaurants/<%= data[i].rid%>"><%= data[i].name%></a></li></td>
 					<td><%= data[i].mindeliveryamount%></td>
 					<td><%= data[i].address%></td>
 				</tr>
