restaurant login added

--- a/App/views/loginbasepage.ejs
+++ b/App/views/loginbasepage.ejs
@@ -14,12 +14,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Home Page</h1>
+    <h1><%= title%></h1>
     <p>Welcome</p>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/insert">Add User</a></li>
-    <li><a href="/select">View All Users</a></li>
-    <li><a href="/drivers">View All Drivers</a></li>
-    <li><a href="/loginrestaurantstaff">Login as restaurant staff</a></li>
+    <li><a href="/login/customer">Login as Customer</a></li>
+    <li><a href="/login/fdsmanager">Login as FDS Manager</a></li>
+    <li><a href="/login/restaurantstaff">Login as Restaurant Staff</a></li>
+    <!-- <li><a href="/login/driver">Login as Driver</a></li>
+    <li><a href="/login/restaurantstaff">Login as Customer</a></li> -->
   </body>
 </html>
