--- a/App/views/loginrestaurantstaff.ejs
+++ b/App/views/loginrestaurantstaff.ejs
@@ -25,7 +25,7 @@
 
 <body>
     <h1><%= title%></h1>
-    <form id="html_form" action="login" role="form" method="post">
+    <form id="html_form" action="loginrestaurantstaff" role="form" method="post">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter a unique username">
