--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -16,10 +16,12 @@
   <body>
     <h1>Home Page</h1>
     <p>Welcome</p>
-    <li><a href="/login">Login</a></li>
+    <li><a href="/login">Login as customer</a></li>
+    <li><a href="/loginrestaurantstaff">Login as Restaurant Staff</a></li>
+    <li><a href="/loginfdsmanager">Login as FDS Manager</a></li>
     <li><a href="/insert">Add User</a></li>
     <li><a href="/select">View All Users</a></li>
     <li><a href="/drivers">View All Drivers</a></li>
-    <li><a href="/loginrestaurantstaff">Login as restaurant staff</a></li>
+    
   </body>
 </html>
