--- a/App/views/loginfdsmanager.ejs
+++ b/App/views/loginfdsmanager.ejs
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-    <h1>Login Page</h1>
-    <form id="html_form" action="login" role="form" method="post">
+    <h1><%= title%></h1>
+    <form id="html_form" action="loginfdsmanager" role="form" method="post">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter a unique username">
