--- a/App/views/login.ejs
+++ b/App/views/login.ejs
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <h1>Login Page</h1>
+    <h1><%= title%></h1>
     <form id="html_form" action="login" role="form" method="post">
         <div class="form-group">
             <label for="username">Username</label>
