Login done for everyone

--- a/App/views/fdsmanagerhomepage.ejs
+++ b/App/views/fdsmanagerhomepage.ejs
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>Welcome <%= name%></h1>
-    <p>Home Page for Customers</p>
+    <p>Home Page for FDS Managers</p>
     <li><a href="/restaurants">View All Restaurants</a></li>
     <li>View Order History</li>
   </body>
