--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -19,6 +19,7 @@
     <li><a href="/login">Login as customer</a></li>
     <li><a href="/loginrestaurantstaff">Login as Restaurant Staff</a></li>
     <li><a href="/loginfdsmanager">Login as FDS Manager</a></li>
+    <li><a href="/logindriver">Login as Driver</a></li>
     <li><a href="/insert">Add User</a></li>
     <li><a href="/select">View All Users</a></li>
     <li><a href="/drivers">View All Drivers</a></li>
