--- a/App/views/restaurantstaffindex.ejs
+++ b/App/views/restaurantstaffindex.ejs
@@ -17,8 +17,8 @@
     <h1>Restaurant Staff Home Page</h1>
     <p>Welcome</p>
     <li><a href="/addRestaurantFoodItem"> Add a new Restaurant food item</a></li>
-    <!--<li><a href="/insert">Add User</a></li>
-    <li><a href="/select">View All Users</a></li>
+    <li><a href="/viewFoodItems">View all Food Items</a></li>
+    <!--<li><a href="/select">View All Users</a></li>
     <li><a href="/drivers">View All Drivers</a></li>-->
   </body>
 </html>
