--- a/App/views/restaurantstaffindex.ejs
+++ b/App/views/restaurantstaffindex.ejs
@@ -15,9 +15,9 @@
   </head>
   <body>
     <h1>Restaurant Staff Home Page</h1>
-    <p>Welcome</p>
+    <p>Welcome <%= name%></p>
     <li><a href="/addRestaurantFoodItem"> Add a new Restaurant food item</a></li>
-    <li><a href="/viewFoodItems">View all Food Items</a></li>
+    <li><a href="/viewFoodItems/<%= rid%>">View all Food Items</a></li>
     <!--<li><a href="/select">View All Users</a></li>
     <li><a href="/drivers">View All Drivers</a></li>-->
   </body>
