--- a/App/views/loginrestaurantstaff.ejs
+++ b/App/views/loginrestaurantstaff.ejs
@@ -34,7 +34,11 @@
             <label for="password">Password</label>
             <input type="text" class="form-control" id="password" name="password" placeholder="Enter your password">
         </div>
-
+        <div class="form-group">
+           Working at:  <input type="radio" name="rid" id = "rid" value="1"/> MacDonald
+                        <input type="radio" name="rid" id= "rid" value="2"/> KFC
+                        <input type="radio" name="rid" id= "rid" value="3"/> Burger King
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
