--- a/App/views/loginrestaurantstaff.ejs
+++ b/App/views/loginrestaurantstaff.ejs
@@ -35,9 +35,12 @@
             <input type="text" class="form-control" id="password" name="password" placeholder="Enter your password">
         </div>
         <div class="form-group">
-           Working at:  <input type="radio" name="rid" id = "rid" value="1"/> MacDonald
-                        <input type="radio" name="rid" id= "rid" value="2"/> KFC
-                        <input type="radio" name="rid" id= "rid" value="3"/> Burger King
+            Working at:  
+           <select name ="rid" id ="rid">
+               <option value="1">MacDonald</option>
+               <option value="2">KFC</option>
+               <option value="3">Burger King</option>
+            </select>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
