--- a/App/views/deleteRestaurantFoodItem.ejs
+++ b/App/views/deleteRestaurantFoodItem.ejs
@@ -52,6 +52,10 @@
 				<% } %>
 			</tbody>
         </table>
+        <!--footer-->
+    <div style="width: 100%; clear: both;">
+        <img src="https://bit.ly/2102footer">
+      </div>
   </body>
 </html>
 
