--- a/App/views/addRestaurantFoodItem.ejs
+++ b/App/views/addRestaurantFoodItem.ejs
@@ -17,11 +17,16 @@
 		<script src="javascripts/insertScript.js"></script>
   </head>
   <body>
-    <h1>Restaurant Staff: <%= title%></h1>
+	<h1>Restaurant Staff: <%= title%></h1>
+	<p></p>
 		<form id="html_form" action="addRestaurantFoodItem" role="form" method="post">
 			<div class="form-group">
-				<label for="cid">Category ID:</label>
-				<input type="text" class="form-control" id="cid" name="cid" aria-describedby="cid" placeholder="Enter category ID">
+				Choose the food category:  
+			   <select name ="rid" id ="rid">
+				   <option value="1">Fast Food</option>
+				   <option value="2">Western Food</option>
+				   <option value="3">Chinese Food</option>
+				</select>
 			</div>
 			<div class="form-group">
 				<label for="foodName">Food Item Name:</label>
@@ -40,8 +45,12 @@
 											<input type="radio" name="availability" id= "availability" value="False"/> False
             </div>
             <div class="form-group">
-				<label for="rid">Enter Restaurant's ID:</label>
-				<input type="number" class="form-control" id="rid" name="rid" placeholder="Enter restaurant's ID">
+				From which Restaurant:  
+			   <select name ="rid" id ="rid">
+				   <option value="1">MacDonald</option>
+				   <option value="2">KFC</option>
+				   <option value="3">Burger King</option>
+				</select>
 			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
@@ -56,5 +65,10 @@
 				}, false);
 			})();
 		</script>
+
   </body>
+  <!--footer-->
+  <div style="padding-top: 30px;">
+	<img src="https://bit.ly/2102footer">
+  </div>
 </html>
