--- a/App/views/addRestaurantFoodItem.ejs
+++ b/App/views/addRestaurantFoodItem.ejs
@@ -68,7 +68,7 @@
 
   </body>
   <!--footer-->
-  <div style="padding-top: 30px;">
+  <div style="margin:0px;padding-top: 30px;">
 	<img src="https://bit.ly/2102footer">
   </div>
 </html>
