--- a/App/views/restaurantstaffindex.ejs
+++ b/App/views/restaurantstaffindex.ejs
@@ -18,7 +18,7 @@
       
       <!--header-->
       <div stlye="width: 100%">
-        <img src="https://bit.ly/2102headerV7">
+        <img src="https://bit.ly/2102headerV8">
       </div>
 
       <!--main content-->
@@ -39,7 +39,7 @@
 
     <!--footer-->
     <div style="width: 100%; clear: both;">
-      <img src="https://bit.ly/2102footer">
+      <img src="https://bit.ly/2102footerV4">
     </div>
   </div>
   </body>
