added orders and fdspromotions

--- a/App/views/fdsmanager/fdspromotions.ejs
+++ b/App/views/fdsmanager/fdspromotions.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
 		<!-- Page Title -->
-    <title>Home Page</title>
+    <title>Drivers View Page</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 		
 		<!-- CSS for Styling -->
@@ -15,11 +15,27 @@
   </head>
   <body>
     <h1><%= title%></h1>
-    <p>Welcome</p>
-    <li><a href="/login/customer">Login as Customer</a></li>
-    <li><a href="/login/fdsmanager">Login as FDS Manager</a></li>
-    <li><a href="/login/restaurantstaff">Login as Restaurant Staff</a></li>
-    <!-- <li><a href="/login/driver">Login as Driver</a></li>
-    <li><a href="/login/restaurantstaff">Login as Customer</a></li> -->
+		<table class="table">
+			<thead>
+				<tr>
+					<th scope="col">Promotion ID</th>
+					<th scope="col">Name</th>
+					<th scope="col">Discount Amount</th>
+                    <th scope="col">Start Date</th>
+                    <th scope="col">End Date</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% for(var i=0; i<data.length; i++) { %>
+				<tr>
+					<td><%= data[i].fpid%></td>
+					<td><%= data[i].name%></td>
+                    <td><%= data[i].discountamount%></td>
+                    <td><%= data[i].startdate%></td>
+                    <td><%= data[i].enddate%></td>
+				</tr>
+				<% } %>
+			</tbody>
+		</table>
   </body>
 </html>
