SignupDate added to Customer

--- a/App/views/fdsmanager/fdsmanagerhomepage.ejs
+++ b/App/views/fdsmanager/fdsmanagerhomepage.ejs
@@ -19,6 +19,11 @@
     <li><a href="/restaurants" >View All Restaurants</a></li>
     <li><a href="/drivers">View All Drivers</a></li>
     <li><a href="/fdspromotions">View All FDS Promotions</a></li>
-    <li><a href="/orders">View All Orders</a></li>
+    <li><a href="/addfdspromotion">Create a new FDS Promotions</a></li>
+    <li><a href="/unassignedorders">View All Unassigned Orders</a></li>
+    <p>1. Let Manager choose YYYY-MM, and we view the new customers, total orders and total costs</p>
+    <p>2. Let Manager choose YYYY-MM, then display all customers, his total num and total cost (group the orders by CID)</p>
+    <p>3. I guess let Manager choose the (1)specific date and hour, 2pm = 2-3pm, and also enter (2)location area</p>
+    <p>4. I guess let Manager choose (1) specific month, and (2) specific rider then all info comes out. Do i need to do a rider view / month view?</p>
   </body>
 </html>
