Init and fdsmanager edited

--- a/App/views/fdsmanager/addfdspromotion.ejs
+++ b/App/views/fdsmanager/addfdspromotion.ejs
@@ -29,7 +29,7 @@
 				<input type="text" class="form-control" id="name" name="name" placeholder="Enter the Promotion Name">
 			</div>
 			<div class="form-group">
-				<label for="discountAmount">Discount Amount($):</label>
+				<label for="discountAmount">Discount Amount(%):</label>
 				<input type="number" class="form-control" id="discountAmount" name="discountAmount" placeholder="Enter Discount Amount">
 			</div>
 			<div class="form-group">
