--- a/App/views/fdsmanager/fdspromotions.ejs
+++ b/App/views/fdsmanager/fdspromotions.ejs
@@ -20,7 +20,7 @@
 				<tr>
 					<th scope="col">Promotion ID</th>
 					<th scope="col">Name</th>
-					<th scope="col">Discount Amount</th>
+					<th scope="col">Discount Amount(%)</th>
                     <th scope="col">Start Date</th>
                     <th scope="col">End Date</th>
 				</tr>
