--- a/App/views/driver/driverRegister.ejs
+++ b/App/views/driver/driverRegister.ejs
@@ -26,7 +26,7 @@
 <body>
 
     <h1><%= title%></h1>
-    <form id="html_form" action="registerDriver" role="form" method="post">
+    <form id="html_form" action="driverRegister" role="form" method="post">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
@@ -47,7 +47,7 @@
              </select>
         </div>
         <!-- need to figure out the shifts/wws/mws thing TT  -->
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" onclick="location.href='/driverhomepage.ejs'">Submit</button>
     </form>
 
     <script>
