--- a/App/views/drivers.ejs
+++ b/App/views/drivers.ejs
@@ -22,7 +22,7 @@
 					<th scope="col">Name</th>
 					<th scope="col">Username</th>
                     <th scope="col">Password</th>
-                    <th scope="col">Commission</th>
+                    <th scope="col">Salary</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -32,7 +32,6 @@
 					<td><%= data[i].name%></td>
                     <td><%= data[i].username%></td>
                     <td><%= data[i].password%></td>
-                    <td><%= data[i].commission%></td>
 				</tr>
 				<% } %>
 			</tbody>
