--- a/App/views/fdsmanager/fdsmanagerhomepage.ejs
+++ b/App/views/fdsmanager/fdsmanagerhomepage.ejs
@@ -17,7 +17,8 @@
     <h1>Welcome <%= name%></h1>
     <p>Home Page for FDS Managers</p>
     
-    <li><a href="/fdsmanagement">FDS Promotion Management</a></li>
+    <li><a href="/fdspromotionmanagement">FDS Promotion Management</a></li>
+    <li><a href="/restaurantmanagement">Restaurant Management</a></li>
     <li><a href="/fdsone">FDS Manager Summary One</a></li>
     <li><a href="/fdstwo">FDS Manager Summary Two</a></li>
     <li><a href="/fdsthree">FDS Manager Summary Three</a></li>
