--- a/App/views/driver/driverRegister.ejs
+++ b/App/views/driver/driverRegister.ejs
@@ -47,7 +47,7 @@
              </select>
         </div>
         <!-- need to figure out the shifts/wws/mws thing TT  -->
-        <button type="submit" class="btn btn-primary" onclick="location.href='/driverhomepage.ejs'">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
     <script>
