--- a/App/views/restaurantfooditems.ejs
+++ b/App/views/restaurantfooditems.ejs
@@ -13,7 +13,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body id="body" >
     <h1><%= title%> menu:</h1>
 		<table class="table">
 			<thead>
@@ -30,10 +30,18 @@
                     <td><%= data[i].foodname%></td>
                     <td><%= data[i].maxorders%></td>
 					<td><%= data[i].price%></td>
-					<td><%= data[i].availability%></td>
+					<td><%= data[i].availability%></td> 
 				</tr>
 				<% } %>
 			</tbody>
-        </table>
+		</table>
+		<button type="button" onclick="deleteFunction()">Delete Restaurant</button>
+
+		<script>
+			function deleteFunction() {
+				//var idstring = <%= data[0].foodname%>;
+				location.replace("http://localhost:3000/restaurants/1")
+			}
+		</script>
   </body>
 </html>
