--- a/App/views/driver/driverRegister.ejs
+++ b/App/views/driver/driverRegister.ejs
@@ -28,6 +28,10 @@
     <h1><%= title%></h1>
     <form id="html_form" action="driverRegister" role="form" method="post">
         <div class="form-group">
+            <label for="did">Driver Id</label>
+            <input type="text" class="form-control" id="did" name="did" placeholder="Enter driver id">
+        </div>
+        <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
         </div>
