--- a/App/views/driver/driverhomepage.ejs
+++ b/App/views/driver/driverhomepage.ejs
@@ -16,8 +16,9 @@
   <body>
     <h1>Welcome <%= name%></h1>
     <p>Home Page for Delivery Riders</p>
-    <li><a href="/restaurants">View Salary</a></li>
+    <li><a href="/viewSalary">View Salary</a></li>
     <li>View Past Work Schedule</li>
-    <li>View Number of Hours worked</li>
+    <li>View Past Orders Delivered</li> 
+    <!-- inside view past deliveries show them number of hours worked -->
   </body>
 </html>
