--- a/App/views/driver/driverRegister.ejs
+++ b/App/views/driver/driverRegister.ejs
@@ -43,6 +43,7 @@
             <label for="password">Password</label>
             <input type="text" class="form-control" id="password" name="password" placeholder="Enter a password">
         </div>
+        <!-- add field for date -->
         <div class="form-group">
             Register as a :
             <select name ="typeOfRider" id ="typeOfRider">
