--- a/App/views/addRestaurantFoodItem.ejs
+++ b/App/views/addRestaurantFoodItem.ejs
@@ -22,7 +22,7 @@
 		<form id="html_form" action="addRestaurantFoodItem" role="form" method="post">
 			<div class="form-group">
 				Choose the food category:  
-			   <select name ="rid" id ="rid">
+			   <select name ="cid" id ="cid">
 				   <option value="1">Fast Food</option>
 				   <option value="2">Western Food</option>
 				   <option value="3">Chinese Food</option>
