--- a/App/views/viewAllOrders.ejs
+++ b/App/views/viewAllOrders.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
 		<!-- Page Title -->
-    <title>CS2102 Database Connect</title>
+    <title>RS: View All Orders</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 		
 		<!-- CSS for Styling -->
