--- a/App/views/fdsmanager/fdspromotionmanagement.ejs
+++ b/App/views/fdsmanager/fdspromotionmanagement.ejs
@@ -16,7 +16,7 @@
   <body>
     <h1><%= title%></h1>
     <li><a href="/fdspromotions">View All FDS Promotions</a></li>
-    <li><a href="/addfdspromotion">Create a new FDS Promotions</a></li>
+    <li><a href="/addfdspromotion">Create a new FDS Promotion</a></li>
     <p>Maybe this page by default list all promotions? Then at the top are the buttons to create or others</p>
   </body>
 </html>
