--- a/App/views/fdsmanager/restaurantstaffmanagement.ejs
+++ b/App/views/fdsmanager/restaurantstaffmanagement.ejs
@@ -14,25 +14,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Welcome <%= name%></h1>
-    <p>Home Page for FDS Managers</p>
-    
-    <li><a href="/fdspromotionmanagement">FDS Promotion Management</a></li>
-    <li><a href="/restaurantmanagement">Restaurant Management</a></li>
-    <li><a href="/restaurantstaffmanagement">Restaurant Staff Management</a></li>
-    <li><a href="/shiftmanagement"> Schedule Management</a></li>
-    <li><a href="/fdsone">FDS Manager Summary One</a></li>
-    <li><a href="/fdstwo">FDS Manager Summary Two</a></li>
-    <li><a href="/fdsthree">FDS Manager Summary Three</a></li>
-
-    <li><a href="/restaurants" >View All Restaurants</a></li>
-    <li><a href="/drivers">View All Drivers</a></li>
-    <li><a href="/unassignedorders">View All Unassigned Orders</a></li>
-
-    <p>4. I guess let Manager choose (1) specific month, and (2) specific rider then all info comes out. Do i need to do a rider view / month view?</p>
-    <p>Add driver, CRUD restaurant and restaurantstaff</p>
-    <p>Allocate Schedule and Manage Schedules</p>
-    <p>Manage Payroll</p>
-    <p>View Manpower?</p>
+    <h1>Restaurant Management Page</h1>
+    <li><a href="/viewallrestaurantstaff" >View All Restaurant Staff</a></li>
+    <li><a href="/addrestaurantstaff" >Add New Restaurant Staff</a></li>
+    <li><a href="/deleterestaurantstaff" >Delete Restaurant Staff</a></li>
   </body>
 </html>
