--- a/App/views/createNewOrder/viewRestaurantList.ejs
+++ b/App/views/createNewOrder/viewRestaurantList.ejs
@@ -14,35 +14,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Welcome <%= data[0].name%></h1>
-    <table class="table">
-      <tr>
-        <th scope="col">User Id</th>
-        <th scope="col">Username</th>
-      </tr>
-      <tr>
-        <td><%= data[0].uid%></td>
-        <td><%= data[0].username%></td>
-      </tr>
-
-    </table>
-    <p>Home Page for Customers</p>
-    <li><a href="/restaurants">View All Restaurants</a></li>
-    <form id="createOrder" action="createOrder" method="post">
-      <input type="hidden" name="uid" value="<%= data[0].uid%>">
-      <button type="submit" class="btn btn-primary">Create New Order</button>
-    </form>
-    <li>View Order History</li>
-
-    <script>
-      (function () {
-          window.addEventListener('load', function () {
-              var forms = [document.getElementById('createOrder')];
-              var validation = Array.prototype.filter.call(forms, function (form) {
-                  form.addEventListener('submit', check, false);
-              });
-          }, false);
-      })();
-  </script>
+    <h1>Your userid is <%= uid%></h1>
+    
   </body>
 </html>
