--- a/App/views/createNewOrder/chooseRestaurantList.ejs
+++ b/App/views/createNewOrder/chooseRestaurantList.ejs
@@ -14,30 +14,40 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Welcome <%= data[0].name%></h1>
+    <h1>Your userid is <%= uid%></h1>
     <table class="table">
-      <tr>
-        <th scope="col">User Id</th>
-        <th scope="col">Username</th>
-      </tr>
-      <tr>
-        <td><%= data[0].uid%></td>
-        <td><%= data[0].username%></td>
-      </tr>
-
+        <thead>
+            <tr>
+                <th scope="col">Restaurant ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Minimum Delivery Amount</th>
+                <th scope="col">Address</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% for(var i=0; i<data.length; i++) { %>
+            <tr>
+                <td><%= data[i].rid%></td>
+                <td><%= data[i].name%></td>
+                <td><%= data[i].mindeliveryamount%></td>
+                <td><%= data[i].address%></td>
+            </tr>
+            <% } %>
+        </tbody>
     </table>
-    <p>Home Page for Customers</p>
-    <li><a href="/restaurants">View All Restaurants</a></li>
-    <form id="createOrder" action="chooseRestaurant" method="post">
-      <input type="hidden" name="uid" value="<%= data[0].uid%>">
-      <button type="submit" class="btn btn-primary">Create New Order</button>
-    </form>
-    <li>View Order History</li>
+    <form id="chooseFoodItem" action="chooseNumberOfFoodItem" role="form" method="post">
+        <div class="form-group">
+            <label for="rid">Enter retaurant Id</label>
+            <input type="text" class="form-control" id="rid" name="rid">
+        </div>
+        <input type="hidden" name="uid" value="<%= uid%>">
 
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
     <script>
       (function () {
           window.addEventListener('load', function () {
-              var forms = [document.getElementById('createOrder')];
+              var forms = [document.getElementById('chooseFoodItem')];
               var validation = Array.prototype.filter.call(forms, function (form) {
                   form.addEventListener('submit', check, false);
               });
