--- a/App/views/driver/driverhomepage.ejs
+++ b/App/views/driver/driverhomepage.ejs
@@ -3,7 +3,7 @@
   <head>
 		<!-- Page Title -->
     <title>Home Page</title>
-    <link rel='stylesheet' href='/App/public/stylesheets/style.css'/>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
 		
 		<!-- CSS for Styling -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -13,12 +13,34 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
+  <style>
+    a:link,
+    a:visited {
+        color: grey;
+        text-decoration: none;
+    }
+    a:hover,
+    a:active {
+        color: rgb(119, 108, 218);
+    }
+  </style>
   <body>
     <h1>Welcome <%= name%></h1>
-    <p>Home Page for Delivery Riders</p>
-    <li><a href="/viewSalary">View Salary</a></li>
-    <li>View Past Work Schedule</li>
+    <p id = "date" style = "font-weight:bold"></p>
+    <p style = "font-style:italic">Home Page for Delivery Riders</p>
+    <li><a href="/viewSalary/<%= uid%>">View Salary</a></li>
+    <li><a href="/viewWorkSchedules/<%= uid%>"></a>View Work Schedules</li>
     <li>View Past Orders Delivered</li> 
     <!-- inside view past deliveries show them number of hours worked -->
   </body>
+
+<script>
+  var n =  new Date();
+  y = n.getFullYear();
+  m = n.getMonth() + 1;
+  d = n.getDate();
+  document.getElementById("date").innerHTML = "Today's date is: " + d + "/" + m + "/" + y;
+</script>
+
+
 </html>
