--- a/App/views/driver/driverRegister.ejs
+++ b/App/views/driver/driverRegister.ejs
@@ -4,7 +4,7 @@
 <head>
     <!-- Page Title -->
     <title>Register Driver</title>
-    <link rel='stylesheet' href='/App/public/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <!-- CSS for Styling -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
