--- a/App/views/driver/viewSalary.ejs
+++ b/App/views/driver/viewSalary.ejs
@@ -4,7 +4,7 @@
 <head>
     <!-- Page Title -->
     <title>View Salary</title>
-    <link rel='stylesheet' href='/App/public/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
 
     <!-- CSS for Styling -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -26,10 +26,29 @@
 <body>
 
     <h1><%= title%></h1>
+    <p>Base Salary: <%= data[0].salary%></p>
     <!-- need to show base monthly/weekly salary based on whether FT or PT
     & show total salary received since he started (actl this is a problem already like maybe need take note
     of when the driver joined so can calculate that) -->
 
 </body>
+
+<script>
+    //get today's date so i can use it to minus away the driver's signupdate and calc salary
+    var today =  new Date();
+    y = today.getFullYear();
+    m = today.getMonth() + 1;
+    d = today.getDate();
+    document.getElementById("date").innerHTML = d + "/" + m + "/" + y;
+    
+    (function() {
+        window.addEventListener('load', function() {
+            var forms = [document.getElementById('html_form')];
+            var validation = Array.prototype.filter.call(forms, function(form) {
+                form.addEventListener('submit', check, false);
+            });
+        }, false);
+    })();
+</script>
 
 </html>
