--- a/App/views/fdsmanager/viewshifts.ejs
+++ b/App/views/fdsmanager/viewshifts.ejs
@@ -23,10 +23,20 @@
 </head>
 
 <body>
-	<h1><%= title%><%= date%></h1>
+	<form id="addshift" action="addshift" method="post">
+		<input type="hidden" name="date" value="<%= date%>">
+		<button type="submit" class="btn btn-primary">Create New Shift</button>
+	</form>
+	<!-- this shouldnt direct to my addshift page, it should direct to some other place that can take in 
+	this button value through POST METHOD.
+or maybe we pass to addShift's post method and update it there? 
+shit but then the post method is alraedy used to create the shift ? unless i make two different post methods then-->
+
+	<h1><%= date%></h1>
 	<table class="table">
 		<thead>
 			<tr>
+				<th scope="col">Shift ID</th>
 				<th scope="col">Driver ID</th>
 				<th scope="col">Driver Name</th>
 				<th scope="col">Start Time</th>
@@ -36,6 +46,7 @@
 		<tbody>
 			<% for(var i=0; i<data.length; i++) { %>
 			<tr>
+				<td><%= data[i].sid%></td>
 				<td><%= data[i].uid%></td>
 				<td><%= data[i].name%></td>
 				<td><%= data[i].starttime%></td>
