--- a/App/views/fdsmanager/viewshifts.ejs
+++ b/App/views/fdsmanager/viewshifts.ejs
@@ -30,7 +30,9 @@
 	<!-- this shouldnt direct to my addshift page, it should direct to some other place that can take in 
 	this button value through POST METHOD.
 or maybe we pass to addShift's post method and update it there? 
-shit but then the post method is alraedy used to create the shift ? unless i make two different post methods then-->
+shit but then the post method is alraedy used to create the shift ? unless i make two different post methods then
+i think answer is to pass this date into some post method somewhere, then render and pass the date into that form. pass that date into 
+the form, so that user doesnt have to input the date and can just directly use that date in the form, we do something -->
 
 	<h1><%= date%></h1>
 	<table class="table">
